--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -6,5 +14,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "Online Paluwagan"
+rootProject.name = 'Online Paluwagan'
 include ':app'
